<resources>
    <string name="app_name">Business Card</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="form_name">Nome</string>
    <string name="form_company">Empresa</string>
    <string name="form_phone_number">Telefone de contato</string>
    <string name="form_email">E-mail</string>
    <string name="form_color">Cor de fundo</string>
    <string name="sucess">Cartão cadastrado com sucesso!</string>
    <string name="choose_color">Escolha uma cor</string>
    <string name="btn_save">Salvar</string>
    <string name="label_share">Compartilhar</string>
</resources>